<resources>
    <string name="app_name">Fronter Feed</string>
    <string name="title_activity_feed">Fronter Feed</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_view_message">View Message</string>
    <string name="action_logout">Sign out</string>
    <string name="action_refresh">Refresh</string>

    <string name="pref_sync_interval_default">2</string>
    <string name="pref_sync_wifi">Only on WIFI</string>
    <string name="pref_sync_wifi_summary">Only do background sync when connected to WIFI</string>
    <string name="pref_sync_interval">Sync Interval</string>
    <string name="pref_notify">Notifications</string>
    <string name="pref_notify_summary">Notify when new messages are posted on fronter.</string>
    <string name="prompt_baseurl">Fronter URL</string>
    <string name="failed_to_load_data">Failed to load data</string>
    <string name="no_network_available_title">No network</string>
    <string name="sync_failed_title">Failed</string>
    <string name="no_network_available_desc">No network available.</string>
    <string name="error_authentication_failed">Authentication failed. Wrong username or password.</string>
    <string name="error_invalid_feed_url">Invalid Fronter URL</string>
    <string name="error_feed_url_not_found">Fronter URL not found</string>
    <string name="store_credentials_title">Username and password</string>
    <string name="store_credentials_description">Your username and password will be stored on your device. This is needed for the app to be able to download updates from Fronter in the background. The values will be stored in encrypted form, nevertheless a skilled attacker with physical access to your device could still be able to retrieve the values. The device should therefore not be handed over to anyone you don\'t trust for long periods of time. </string>
    <string name="feed_url_hint_title">Fronter URL</string>
    <string name="feed_url_hint_description">The url should be the one you see when you log in to fronter.\nSomething like:\nhttps://fronter.com/myschool/</string>
    <string name="generic_error_title">Error</string>
    <string name="error_credentials_must_be_stored">The username and password must be stored for the app to work.</string>

    <string name="notifications_message">New message(s) was posted on fronter.</string>

    <string name="title_activity_settings">Settings</string>



    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>

    <string name="error_field_required">This field is required</string>



    <string name="sync_interval_0">Every 15 minutes</string>
    <string name="sync_interval_1">Every 30 minutes</string>
    <string name="sync_interval_2">Every hour</string>
    <string name="sync_interval_3">Twice a day</string>
    <string name="sync_interval_4">Once a day</string>



    <string name="sync_interval_0_value" translatable="false">0</string>
    <string name="sync_interval_1_value" translatable="false">1</string>
    <string name="sync_interval_2_value" translatable="false">2</string>
    <string name="sync_interval_3_value" translatable="false">3</string>
    <string name="sync_interval_4_value" translatable="false">4</string>

    <string name="empty_feed_list_message">No messages</string>
    <string name="store_credentials_confirm">Store username and password</string>
    <string name="feed_url_default">https://fronter.com/myschool</string>
</resources>
