<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="pref_notify"
        android:title="@string/pref_notify"
        android:summary="@string/pref_notify_summary"
        android:defaultValue="true" />


    <CheckBoxPreference
        android:dependency="pref_notify"
        android:key="pref_sync_wifi"
        android:title="@string/pref_sync_wifi"
        android:summary="@string/pref_sync_wifi_summary"
        android:defaultValue="true" />

    <ListPreference
        android:dependency="pref_notify"
        android:key="pref_sync_interval"
        android:title="@string/pref_sync_interval"
        android:dialogTitle="@string/pref_sync_interval"
        android:entries="@array/pref_sync_interval_entries"
        android:entryValues="@array/pref_sync_interval_values"
        android:summary="%s"
        android:defaultValue="@string/pref_sync_interval_default" />



</PreferenceScreen>